// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files 1`] = `
Array [
  "account-insert-request.form-group-fac.ts",
  "account-insert-request.model.ts",
  "account-insert-request.properties.ts",
  "account-update-request.form-group-fac.ts",
  "account-update-request.model.ts",
  "account-update-request.properties.ts",
  "account.form-group-fac.ts",
  "account.model.ts",
  "account.properties.ts",
  "contact-insert-request.form-group-fac.ts",
  "contact-insert-request.model.ts",
  "contact-insert-request.properties.ts",
  "contact-update-request.form-group-fac.ts",
  "contact-update-request.model.ts",
  "contact-update-request.properties.ts",
  "contact.form-group-fac.ts",
  "contact.model.ts",
  "contact.properties.ts",
  "endpoints.ts",
  "index.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IAccount } from './account.model';
import { IAccountForm } from './account.form-group-fac';
import { IContactForm } from './contact.form-group-fac';

export interface IAccountForm {
    id: FormControl<string | null>;
    refId: FormControl<string | null>;
    name: FormControl<string | null>;
    parentAccountId: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    emailInvoice: FormControl<boolean | null>;
    tenantId: FormControl<string | null>;
    contactCount: FormControl<number | null>;
    parentAccount: FormControl<IAccount | null>;
    contacts: FormArray<FormGroup<IContactForm>>;
    inverseParentAccount: FormArray<FormGroup<IAccountForm>>;
}

export function AccountFormGroupFac(): FormGroup<IAccountForm> {
  return new FormGroup<IAccountForm>({
    id: new FormControl<string | null>(null),
    refId: new FormControl<string | null>(null),
    name: new FormControl<string | null>(null),
    parentAccountId: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    emailInvoice: new FormControl<boolean | null>(null),
    tenantId: new FormControl<string | null>(null),
    contactCount: new FormControl<number | null>(null, { validators: Validators.compose([Validators.min(1), Validators.max(99999)]) }),
    parentAccount: new FormControl<IAccount | null>(null),
    contacts: new FormArray<FormGroup<IContactForm>>([], { validators: Validators.compose([Validators.minLength(1), Validators.maxLength(3)]) }),
    inverseParentAccount: new FormArray<FormGroup<IAccountForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

/**
 * Customer Account
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccount {
  id?: string | null;
  refId?: string | null;
  name?: string | null;
  parentAccountId?: string | null;
  isEnabled?: boolean | null;
  emailInvoice?: boolean | null;
  tenantId?: string | null;
  contactCount?: number | null;
  parentAccount?: IAccount | null;;
  contacts?: IContact[] | null;;
  inverseParentAccount?: IAccount[] | null;;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
/**
 * Customer Account
 */
export enum AccountProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  TENANT_ID = 'tenantId',
  CONTACT_COUNT = 'contactCount',
  PARENT_ACCOUNT = 'parentAccount',
  CONTACTS = 'contacts',
  INVERSE_PARENT_ACCOUNT = 'inverseParentAccount',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form-group-fac';

export interface IAccountInsertRequestForm {
    id: FormControl<string | null>;
    refId: FormControl<string | null>;
    name: FormControl<string>;
    parentAccountId: FormControl<string | null>;
    emailInvoice: FormControl<boolean | null>;
    contacts: FormArray<FormGroup<IContactForm>>;
}

export function AccountInsertRequestFormGroupFac(): FormGroup<IAccountInsertRequestForm> {
  return new FormGroup<IAccountInsertRequestForm>({
    id: new FormControl<string | null>(null),
    refId: new FormControl<string | null>(null),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    parentAccountId: new FormControl<string | null>(null),
    emailInvoice: new FormControl<boolean | null>(null),
    contacts: new FormArray<FormGroup<IContactForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccountInsertRequest {
  id?: string | null;
  refId?: string | null;
  name?: string | null;
  parentAccountId?: string | null;
  emailInvoice?: boolean | null;
  contacts?: IContact[] | null;;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountInsertRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form-group-fac';

export interface IAccountUpdateRequestForm {
    id: FormControl<string | null>;
    refId: FormControl<string>;
    name: FormControl<string>;
    parentAccountId: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    emailInvoice: FormControl<boolean | null>;
    contacts: FormArray<FormGroup<IContactForm>>;
}

export function AccountUpdateRequestFormGroupFac(): FormGroup<IAccountUpdateRequestForm> {
  return new FormGroup<IAccountUpdateRequestForm>({
    id: new FormControl<string | null>(null),
    refId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    parentAccountId: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    emailInvoice: new FormControl<boolean | null>(null),
    contacts: new FormArray<FormGroup<IContactForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccountUpdateRequest {
  id?: string | null;
  refId?: string | null;
  name?: string | null;
  parentAccountId?: string | null;
  isEnabled?: boolean | null;
  emailInvoice?: boolean | null;
  contacts?: IContact[] | null;;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountUpdateRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IAccount } from './account.model';

export interface IContactForm {
    id: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    contactTypeId: FormControl<string>;
    accountId: FormControl<string>;
    firstName: FormControl<string>;
    lastName: FormControl<string>;
    middleName: FormControl<string | null>;
    addressLine1: FormControl<string>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string>;
    state: FormControl<string>;
    zip: FormControl<string>;
    emails: FormControl<string | null>;
    phone1: FormControl<string | null>;
    phone2: FormControl<string | null>;
    account: FormControl<IAccount | null>;
}

export function ContactFormGroupFac(): FormGroup<IContactForm> {
  return new FormGroup<IContactForm>({
    id: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(null),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(null),
    phone1: new FormControl<string | null>(null, { validators: Validators.compose([Validators.minLength(13), Validators.maxLength(14), Validators.pattern('^(d{3}) ?d{3}-d{4}$')]) }),
    phone2: new FormControl<string | null>(null, { validators: Validators.compose([Validators.minLength(13), Validators.maxLength(14), Validators.pattern('^(d{3}) ?d{3}-d{4}$')]) }),
    account: new FormControl<IAccount | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IAccount } from './account.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContact {
/**
 * Unique Identifier
 */
  id?: string | null;
  isEnabled?: boolean | null;
  contactTypeId?: string | null;
  accountId?: string | null;
  firstName?: string | null;
  lastName?: string | null;
  middleName?: string | null;
  addressLine1?: string | null;
  addressLine2?: string | null;
  city?: string | null;
  state?: string | null;
  zip?: string | null;
  emails?: string | null;
  phone1?: string | null;
  phone2?: string | null;
  account?: IAccount | null;;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactProperties {
/**
 * Unique Identifier
 */
  ID = 'id',
  IS_ENABLED = 'isEnabled',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
  ACCOUNT = 'account',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export interface IContactInsertRequestForm {
    id: FormControl<string | null>;
    contactTypeId: FormControl<string>;
    accountId: FormControl<string>;
    firstName: FormControl<string>;
    lastName: FormControl<string>;
    middleName: FormControl<string | null>;
    addressLine1: FormControl<string>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string>;
    state: FormControl<string>;
    zip: FormControl<string>;
    emails: FormControl<string | null>;
    phone1: FormControl<string | null>;
    phone2: FormControl<string | null>;
}

export function ContactInsertRequestFormGroupFac(): FormGroup<IContactInsertRequestForm> {
  return new FormGroup<IContactInsertRequestForm>({
    id: new FormControl<string | null>(null),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(null),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(null),
    phone1: new FormControl<string | null>(null),
    phone2: new FormControl<string | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactInsertRequest {
  id?: string | null;
  contactTypeId?: string | null;
  accountId?: string | null;
  firstName?: string | null;
  lastName?: string | null;
  middleName?: string | null;
  addressLine1?: string | null;
  addressLine2?: string | null;
  city?: string | null;
  state?: string | null;
  zip?: string | null;
  emails?: string | null;
  phone1?: string | null;
  phone2?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactInsertRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export interface IContactUpdateRequestForm {
    id: FormControl<string | null>;
    contactTypeId: FormControl<string>;
    accountId: FormControl<string>;
    firstName: FormControl<string>;
    lastName: FormControl<string>;
    middleName: FormControl<string | null>;
    addressLine1: FormControl<string>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string>;
    state: FormControl<string>;
    zip: FormControl<string>;
    emails: FormControl<string | null>;
    phone1: FormControl<string | null>;
    phone2: FormControl<string | null>;
}

export function ContactUpdateRequestFormGroupFac(): FormGroup<IContactUpdateRequestForm> {
  return new FormGroup<IContactUpdateRequestForm>({
    id: new FormControl<string | null>(null),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(null),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(null),
    phone1: new FormControl<string | null>(null),
    phone2: new FormControl<string | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactUpdateRequest {
  id?: string | null;
  contactTypeId?: string | null;
  accountId?: string | null;
  firstName?: string | null;
  lastName?: string | null;
  middleName?: string | null;
  addressLine1?: string | null;
  addressLine2?: string | null;
  city?: string | null;
  state?: string | null;
  zip?: string | null;
  emails?: string | null;
  phone1?: string | null;
  phone2?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactUpdateRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  accounts = '/api/v1/Accounts.{format}',
  contacts = '/api/v1/Contacts.{format}',
}
export interface IEndpoints {
  readonly accounts: string;
  readonly contacts: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './account-insert-request.form-group-fac';
export * from './account-insert-request.model';
export * from './account-insert-request.properties';
export * from './account-update-request.form-group-fac';
export * from './account-update-request.model';
export * from './account-update-request.properties';
export * from './account.form-group-fac';
export * from './account.model';
export * from './account.properties';
export * from './contact-insert-request.form-group-fac';
export * from './contact-insert-request.model';
export * from './contact-insert-request.properties';
export * from './contact-update-request.form-group-fac';
export * from './contact-update-request.model';
export * from './contact-update-request.properties';
export * from './contact.form-group-fac';
export * from './contact.model';
export * from './contact.properties';
"
`;
